fix: align table header and body column widths

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -173,6 +173,24 @@ body {
         table {
             width: 100%;
             border-collapse: collapse;
+            table-layout: fixed;
+                
+            // Set column widths
+            th:nth-child(1), td:nth-child(1) {
+                width: 40%;
+            }
+            th:nth-child(2), td:nth-child(2) {
+                width: 15%;
+            }
+            th:nth-child(3), td:nth-child(3) {
+                width: 15%;
+            }
+            th:nth-child(4), td:nth-child(4) {
+                width: 15%;
+            }
+            th:nth-child(5), td:nth-child(5) {
+                width: 15%;
+            }
             
             thead {
                 position: sticky;
